--- a/example/docker-compose.yaml
+++ b/example/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     volumes:
       - ./cert:/cert
       - ./conf.d:/etc/nginx/conf.d
-      - ./nginx.conf:/etc/nginx/conf.d
+      - ./nginx.conf:/etc/nginx/nginx.conf
     environment:
       - CF_Token=[TOKEN]
       - CF_Account_ID=[账号]
